--- a/package.json
+++ b/package.json
@@ -34,8 +34,16 @@
     "@types/react-native": "^0.67.6",
     "@types/react-redux": "^7.1.24",
     "@types/styled-components": "^5.1.25",
+    "@typescript-eslint/eslint-plugin": "^5.21.0",
+    "@typescript-eslint/parser": "^5.21.0",
     "babel-jest": "26.6.3",
-    "eslint": "7.32.0",
+    "eslint": "^8.14.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.5.0",
     "jest": "26.6.3",
     "metro-react-native-babel-preset": "0.67.0",
     "react-test-renderer": "17.0.2",
