--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "react-native-reanimated": "^2.8.0",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
+    "react-native-svg": "^12.3.0",
+    "react-native-svg-transformer": "^1.0.0",
+    "react-native-svg-uri": "^1.2.3",
     "react-redux": "^8.0.1",
     "redux": "^4.2.0",
     "styled-components": "^5.3.5"
@@ -34,18 +37,21 @@
     "@types/react-native": "^0.67.6",
     "@types/react-redux": "^7.1.24",
     "@types/styled-components": "^5.1.25",
-    "@typescript-eslint/eslint-plugin": "^5.21.0",
-    "@typescript-eslint/parser": "^5.21.0",
+    "@typescript-eslint/eslint-plugin": "^5.22.0",
+    "@typescript-eslint/parser": "^5.22.0",
     "babel-jest": "26.6.3",
     "eslint": "^8.14.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^26.1.5",
     "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
     "jest": "26.6.3",
     "metro-react-native-babel-preset": "0.67.0",
+    "prettier": "^2.6.2",
     "react-test-renderer": "17.0.2",
     "typescript": "^4.6.4"
   },
