--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-svg": "^12.3.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-svg-uri": "^1.2.3",
+    "react-native-vector-icons": "^9.1.0",
     "react-redux": "^8.0.1",
     "redux": "^4.2.0",
     "styled-components": "^5.3.5"
