--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.4",
     "@react-navigation/bottom-tabs": "^6.0.8",
     "@react-navigation/elements": "^1.3.3",
     "@react-navigation/material-top-tabs": "^6.2.1",
@@ -28,6 +29,7 @@
     "react-native-svg-transformer": "^1.0.0",
     "react-native-svg-uri": "^1.2.3",
     "react-native-vector-icons": "^9.1.0",
+    "react-native-webview": "^11.18.2",
     "react-redux": "^8.0.1",
     "redux": "^4.2.0",
     "styled-components": "^5.3.5"
