--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-svg": "^12.3.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-svg-uri": "^1.2.3",
+    "react-native-webview": "^11.18.2",
     "react-redux": "^8.0.1",
     "redux": "^4.2.0",
     "styled-components": "^5.3.5"
