--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.4",
+    "@react-native-community/viewpager": "^5.0.11",
     "@react-native-seoul/kakao-login": "^4.0.0",
     "@react-navigation/bottom-tabs": "^6.0.8",
     "@react-navigation/elements": "^1.3.3",
