--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "react": "17.0.2",
     "react-native": "0.68.1",
     "react-native-gesture-handler": "^2.4.1",
+    "react-native-pager-view": "^5.4.24",
     "react-native-reanimated": "^2.8.0",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
     "react-native-svg": "^12.3.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-svg-uri": "^1.2.3",
+    "react-native-tab-view": "^3.1.1",
     "react-native-webview": "^11.18.2",
     "react-redux": "^8.0.1",
     "redux": "^4.2.0",
