--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native": "0.68.1",
     "react-native-gesture-handler": "^2.4.1",
     "react-native-pager-view": "^5.4.24",
+    "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "^2.8.0",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
