--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "17.0.2",
     "react-native": "0.68.1",
     "react-native-gesture-handler": "^2.4.1",
+    "react-native-nmap": "^0.0.66",
     "react-native-pager-view": "^5.4.24",
     "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "^2.8.0",
